--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "framer-motion": "^12.23.24",
     "lucide": "^0.548.0",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.7",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "react-paginate": "^8.3.0",
